# airport-simulator

./: .gitignore  Dockerfile.airport  Dockerfile.airport-monitor-server  Dockerfile.base  Dockerfile.dbwriter  Dockerfile.gate  Dockerfile.heartbeat  Dockerfile.planegenerator  Dockerfile.runway  Dockerfile.sky  README.docker.md  README.md  add-component.sh  docker-compose.yml  gate.py  heartbeat.py  plane.py  pyproject.toml  runway.py  sky.py
airport-monitor/: index.html  package-lock.json  package.json
airport-monitor-server/: pyproject.toml  server.py
airport-monitor/src/: App.vue
airport-monitor/src/components/: Airport.vue  Gate.vue  Plane.vue  Runway.vue  Sky.vue  Widget.vue
aws/: connect.sh
scripts/: new_plane.py
simulator/: airport.py  airportcomponent.py  dbwriter.py  gate.py  heartbeat.py  interfaces.py  logger.py  plane.py  planegenerator.py  pyproject.toml  restorable.py  runway.py  sky.py
simulator/tabledefinitions/: flights.sql  plane_events.sql
